# Bicameral_Manifold_GMoE

./: .gitignore  NEXUS_WALKTHROUGH.md  README.md  pyproject.toml  requirements.txt
cli/: interact.py  interact_pytorch.py  interact_v2.py  tui.py
core/: __init__.py  engine_bicameral.py  engine_gguf.py  modeling_bicameral.py  nfe.py  nfe_critic.py  router.py
core/experts/: gmoe_layer.py
core/legacy/bitnet/: eval_task.py
data/processed/: creative_manifold.txt  logic_manifold.txt
experiments/legacy/: train_bicameral_model.ipynb
experiments/legacy/bitnet/: eval_ppl.py
notebooks/: train_bicameral_model.ipynb  train_nfe_critic.ipynb
scripts/: debug_model.py  ingest_reasoning_data.py  setup_gguf.py  train_manifold_differentiation.py
scripts/legacy/: build_bicameral_model.py
tests/: evaluate_bicameral.py  verify_intelligence.py  verify_manifolds.py
